[project]
name = "tri9t"
version = "0.1.0"
description = "Tri9T CT-200 AI Engineering Internship Assignment Backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "alembic>=1.16.4,<2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.4.1,<9.0.0",
    "ruff>=0.12.8,<1.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = []

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[alembic]
script_location = alembic